[gd_scene load_steps=5 format=3 uid="uid://dlmjehxav11dx"]

[ext_resource type="Script" uid="uid://catyjdq20adaf" path="res://entities/pauseMenu/pause_menu.gd" id="1_0ddhp"]
[ext_resource type="LabelSettings" uid="uid://cru5yoau1mluh" path="res://fonts/BigTextLabelSettings.tres" id="1_6mo0v"]
[ext_resource type="Theme" uid="uid://desmbsje23ubj" path="res://fonts/DefautTheme.tres" id="1_bdrf8"]
[ext_resource type="LabelSettings" uid="uid://c33hoau8vc0q7" path="res://fonts/little_label_settings.tres" id="4_k4ey7"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ddhp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bdrf8")
text = "Main sound"

[node name="SliderMainSound" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bdrf8")
text = "Music"

[node name="SliderMusic" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bdrf8")
text = "SFX"

[node name="SliderSFX" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("1_bdrf8")
text = "MainMenu"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -139.0
offset_right = 139.0
offset_bottom = 78.0
grow_horizontal = 2

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Pause"
label_settings = ExtResource("1_6mo0v")

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Press ESC to continue"
label_settings = ExtResource("4_k4ey7")
horizontal_alignment = 1

[connection signal="value_changed" from="VBoxContainer/SliderMainSound" to="." method="_on_slider_main_sound_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SliderMusic" to="." method="_on_slider_music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SliderSFX" to="." method="_on_slider_sfx_value_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
